--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta content="text/html; charset=windows-1252" http-equiv="content-type">
   </head>
   <body>
-    <h1>Hello World!</h1>
-    <p>I'm hosted with GitHub Pages.</p>
+    <h1 style="text-align: center;">Hello World!</h1>
+    <p style="text-align: center;">I'm hosted with GitHub Pages.</p>
   </body>
 </html>
